# Research-skills

./: .gitignore  README.md  pyproject.toml
research-figure/: SKILL.md
research-figure/agents/: openai.yaml
research-figure/references/: api.md  chart-types.md  common-patterns.md  design-theory.md  figure-contract.md  matplotlib-gallery-reference.md  plottie-reference.md  qa-contract.md  r-workflow.md  tutorials.md
research-figure/references/figure/: matplotlib-gallery-index.jsonl  plottie-index.jsonl
research-figure/scripts/: build_matplotlib_gallery_index.py  research_figure_tool.py  search_matplotlib_gallery.py  search_plottie_reference.py
src/research_skills/: __init__.py  research_figure_tool.py
tests/: test_research_figure_tool.py
