[project]
name = "research-skills"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
]

[project.scripts]
research-figure-tool = "research_skills.research_figure_tool:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
